# Qt-LinRegression-example

./: .gitignore  CMakeLists.txt  LinRegExample.pro  README.md  chartview_t.cpp  chartview_t.h  data_example7.csv  mainwindow.cpp  mainwindow.h  mainwindow.ui
